<resources>
    <string name="app_name">InSave</string>
    <string name="login_text">To download <b>Instagram Stories</b> , you need to login to Instagram</string>
    <string name="login_disclaimer">This will lead you to Instagram official website.</string>
    <string name="save">Save</string>
    <string name="str_error_no_internet">No Internet Connection</string>
    <string name="str_error_unknown">Something went wrong, please check your network connection and try again.</string>
    <string name="somethinfgwentwrong">Something went wrong!</string>
    <string name="insave_pro_desp">You need <b>1000</b> credits to upgrade. Watch videos and earn up to 100 credits per video.</string>
    <string name="insta_features">Unlimited Accounts \nNo Ads</string>
    <string name="rate_app">Rate App</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="check_for_update">Check for update</string>
    <string name="tab_download">Download</string>
    <string name="tab_history">History</string>
    <string name="max_account_limit_excede">Maximum account limit reached, Upgrade to premium plan to add unlimited accounts.</string>
    <string name="watch_video">Watch Video</string>
    <string name="login_with_facebook">Login with Facebook</string>
    <string name="login_with_instagram">Login with Instagram</string>
    <string name="logining_in">Logging in...</string>
    <string name="settings">Settings</string>
    <string name="storage">Storage</string>
    <string name="language">Language</string>
    <string name="active">Active</string>
    <string name="no_stories_available">Stories not available</string>
    <string name="try_again">Try again</string>
    <string name="no_download">No download history</string>
    <string name="search_username">Search username</string>
    <string name="oops">Oops</string>
    <string name="something_went_wrong_please_check_your_internet_connection_and_try_again">Something went wrong, please check your internet connection and try again.</string>
    <string name="video_not_available">Video Not Available</string>
    <string name="accounts">Accounts</string>
    <string name="add_account">Add Account</string>
    <string name="download">Download</string>
    <string name="alertTitle">WHY YOU NEED TO LOGIN?</string>
    <string name="alertMsg">Latest Instagram update requires you to login to download stories and reels.</string>
    <string name="download_all">Download all</string>
    <string name="buy_now">Buy Now</string>
    <string name="all_media">All Media</string>
    <string name="congrats">Congratulations</string>
    <string name="congrats_msg">You got %1$s credits, these credits added to your wallet</string>
    <string name="got_it">Got it</string>
    <string name="menu_share">Share</string>
    <string name="menu_repost_instagram">Repost Instagram</string>
    <string name="menu_whatsapp_status">WhatsApp Status</string>
    <string name="menu_delete">Delete</string>
    <string name="start_downloading">\"Start downloading \"</string>
    <string name="str_items">\" items\"</string>
    <string name="post_url_profile_url_username">Paste post or profile url</string>
    <string name="search">Search</string>
    <string name="paste">Paste</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_media">Media</string>
    <string name="caption">Caption</string>
    <string name="stories">Stories</string>
</resources>
