<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.hn.insave.ui.fragment.PremiumDialogFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        app:cardCornerRadius="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imgCredits"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/textDesp"
                app:layout_constraintTop_toBottomOf="@+id/textDesp"
                app:srcCompat="@drawable/ic_money_dollar" />

            <TextView
                android:id="@+id/textFeatures"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="18dp"
                android:lineSpacingExtra="4sp"
                android:text="@string/insta_features"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/cardPremiumIcon"
                app:layout_constraintTop_toBottomOf="@+id/textApp" />

            <TextView
                android:id="@+id/textDesp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:text="@string/insave_pro_desp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textFeatures" />

            <TextView
                android:id="@+id/textApp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:text="@string/app_name"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/cardPremiumIcon"
                app:layout_constraintStart_toEndOf="@+id/cardPremiumIcon"
                app:layout_constraintTop_toTopOf="@+id/cardPremiumIcon" />

            <TextView
                android:id="@+id/textViewCredits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="10"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/imgCredits"
                app:layout_constraintStart_toEndOf="@+id/imgCredits"
                app:layout_constraintTop_toTopOf="@+id/imgCredits" />

            <TextView
                android:id="@+id/textPro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:background="@drawable/bg_pro"
                android:paddingStart="4dp"
                android:paddingTop="2dp"
                android:paddingEnd="4dp"
                android:paddingBottom="2dp"
                android:text="Pro"
                android:textColor="@color/colorWhite"
                android:textSize="12dp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/textApp"
                app:layout_constraintStart_toEndOf="@+id/textApp"
                app:layout_constraintTop_toTopOf="@+id/textApp" />

            <TextView
                android:id="@+id/textViewBuy"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/buy_now"
                android:textColor="@color/colorWhite"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnWatchVideo" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cardPremiumIcon"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:cardBackgroundColor="@color/colorWhite"
                app:cardCornerRadius="0dp"
                app:cardElevation="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    app:srcCompat="@drawable/ic_premium_account" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnWatchVideo"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:stateListAnimator="@null"
                android:text="@string/watch_video"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/imgCredits"
                app:layout_constraintEnd_toEndOf="@+id/textDesp"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/textViewCredits"
                app:layout_constraintTop_toTopOf="@+id/imgCredits"
                app:strokeColor="@color/colorPrimary" />

            <com.ornach.nobobutton.NoboButton
                android:id="@+id/btnClose"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginEnd="12dp"
                android:layout_marginBottom="8dp"
                android:padding="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/cardPremiumIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/cardPremiumIcon"
                app:nb_backgroundColor="@color/colorWhite"
                app:nb_drawableResource="@drawable/ic_close"
                app:nb_focusColor="@color/colorPrimary"
                app:nb_radius="100dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
